@@ -10,34 +10,53 @@
 <!ATTLIST levels divisor CDATA #REQUIRED>
 ]>
 <!--
-  JPEG quantization tables.
+  JPEG quantization table created by Dr. Nicolas Robidoux, Senior Research
+  Scientist at Phase One (www.phaseone.com) for use with 2x2 Chroma
+  subsampling and (IJG-style, hence ImageMagick-style) quality level
+  around 75.
+
+  It is based on the one recommended in
+
+    Relevance of human vision to JPEG-DCT compression by Stanley A. Klein,
+    Amnon D. Silverstein and Thom Carney. In Human Vision, Visual
+    Processing and Digital Display III, 1992.
+
+  for 1 minute per pixel viewing.
+
+  Specifying only one table in this xml file has two effects when used with
+  the ImageMagick option
+  
+    -define jpeg:q-table=PATH/TO/THIS/FILE
+  
+  1) This quantization table is automatically used for all three channels;
+
+  2) Only one copy is embedded in the JPG file, which saves a few bits
+     (only worthwhile for very small thumbnails).
 -->
 <quantization-tables>
-  <table slot="0" alias="luminance">
-    <description>Luminance Quantization Table</description>
+  <table slot="0" alias="luma">
+    <description>Luma Quantization Table</description>
     <levels width="8" height="8" divisor="1">
-      16, 12, 14, 17, 22, 30, 45, 72,
-      12, 13, 14, 17, 22, 31, 46, 74,
-      14, 14, 16, 19, 25, 35, 52, 83,
-      17, 17, 19, 23, 30, 41, 62, 100,
-      22, 22, 25, 30, 39, 54, 80, 129,
-      30, 31, 35, 41, 54, 74, 111, 178,
-      45, 46, 52, 62, 80, 111, 166, 267,
-      72, 74, 83, 100, 129, 178, 267, 428
+      16,  16,  16,  18,  25,  37,  56,  85,
+      16,  17,  20,  27,  34,  40,  53,  75,
+      16,  20,  24,  31,  43,  62,  91,  135,
+      18,  27,  31,  40,  53,  74,  106, 156,
+      25,  34,  43,  53,  69,  94,  131, 189,
+      37,  40,  62,  74,  94,  124, 169, 238,
+      56,  53,  91,  106, 131, 169, 226, 311,
+      85,  75,  135, 156, 189, 238, 311, 418
+    </levels>
+  </table>
+<!--
+  If you want to use a different quantization table for Chroma (say), just add 
+
+  <table slot="1" alias="chroma">
+    <description>Chroma Quantization Table</description>
+    INSERT 64 POSITIVE INTEGERS HERE, COMMA-SEPARATED
     </levels>
   </table>
 
-  <table slot="1" alias="chrominance">
-    <description>Chrominance Quantization Table</description>
-    <levels width="8" height="8" divisor="1">
-      17, 18, 22, 31, 50, 92, 193, 465,
-      18, 19, 24, 33, 54, 98, 207, 498,
-      22, 24, 29, 41, 66, 120, 253, 609,
-      31, 33, 41, 57, 92, 169, 355, 854,
-      50, 54, 66, 92, 148, 271, 570, 1370,
-      92, 98, 120, 169, 271, 498, 1046, 2516,
-      193, 207, 253, 355, 570, 1046, 2198, 5289,
-      465, 498, 609, 854, 1370, 2516, 5289, 12725
-    </levels>
-  </table>
+  here (but outside of these comments).
+-->
 </quantization-tables>
+
